--- a/app/src/main/res/layout/profile_quote_card.xml
+++ b/app/src/main/res/layout/profile_quote_card.xml
@@ -41,7 +41,6 @@
                 android:id="@+id/profilepic"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:contentDescription="Profile picture"
                 android:fitsSystemWindows="true"
@@ -51,7 +50,7 @@
                 android:transitionName="@string/user_pic_transaction"
                 app:civ_circle_background_color="@color/colorAccent"
                 app:civ_border_color="?android:textColorPrimary"
-                app:civ_border_width="0dp"
+                app:civ_border_width="@dimen/default_stroke"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -128,6 +127,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:alpha="0.7"
             android:scaleType="fitCenter"
             android:src="@drawable/giphy_mark" />
