--- a/manager/src/main/res/layout/gif_bottomsheet.xml
+++ b/manager/src/main/res/layout/gif_bottomsheet.xml
@@ -4,7 +4,7 @@
 
 
     <LinearLayout
-        android:background="@color/nblack"
+        android:background="@drawable/stroke_filled_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
