--- a/app/src/main/res/layout/share_quote_preview.xml
+++ b/app/src/main/res/layout/share_quote_preview.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:background="@color/md_black"
-            android:paddingVertical="@dimen/padding_small"
+            android:padding="@dimen/padding_default"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,13 +56,13 @@
                         android:id="@+id/quoteImage"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/motiv_gradient"
+                        android:background="@color/colorAccent"
                         android:scaleType="centerCrop" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:alpha="0.4"
+                        android:alpha="0.03"
                         android:background="@color/md_black" />
 
                     <LinearLayout
@@ -126,7 +126,7 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:indeterminateOnly="true"
-                    app:indicatorColor="@color/colorPrimaryDark"
+                    app:indicatorColor="@color/white"
                     app:showDelay="500"
                     app:trackColor="@color/transparent"
                     app:trackCornerRadius="@dimen/radius_small"
@@ -134,22 +134,6 @@
 
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/shareButton"
-                android:layout_below="@id/shareCard"
-                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:enabled="false"
-                android:padding="@dimen/padding_default"
-                android:layout_margin="@dimen/margin_small"
-                android:text="compartilhar"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:backgroundTint="@color/colorPrimaryDark"
-                app:cornerRadius="0dp"
-                app:strokeColor="@color/md_black"
-                app:strokeWidth="2dp" />
         </RelativeLayout>
 
 
