--- a/base/src/main/res/drawable/stroke_filled_top.xml
+++ b/base/src/main/res/drawable/stroke_filled_top.xml
@@ -8,11 +8,11 @@
     </item>
 
     <item
+        android:bottom="-3dp"
         android:left="-3dp"
-        android:right="-3dp"
-        android:top="-3dp">
+        android:right="-3dp">
         <shape>
-            <solid android:color="@color/transparent" />
+            <solid android:color="?android:colorBackground" />
             <stroke
                 android:width="2dp"
                 android:color="?android:textColorPrimary" />
