--- a/base/src/main/res/layout/horizontal_buttons_layout.xml
+++ b/base/src/main/res/layout/horizontal_buttons_layout.xml
@@ -12,33 +12,15 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancelButton"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/material_grey700"
-            android:paddingHorizontal="@dimen/padding_big"
-            android:paddingVertical="@dimen/padding_default"
+            style="@style/ButtonNegative"
             android:text="cancelar"
-            android:textAllCaps="false"
-            android:textColor="@color/material_grey500"
-            app:backgroundTint="@color/material_grey700"
-            app:cornerRadius="@dimen/radius_default"
-            app:elevation="0dp" />
+            app:strokeColor="?android:textColorHint"
+            app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/okButton"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_default"
-            android:paddingHorizontal="@dimen/padding_big"
-            android:paddingVertical="@dimen/padding_default"
-            android:text="confirmar"
-            android:textAllCaps="false"
-            android:textColor="@color/md_white"
-            app:backgroundTint="@color/md_blue500"
-            app:cornerRadius="@dimen/radius_default"
-            app:elevation="0dp" />
+            style="@style/ButtonPositive"
+            android:text="confirmar" />
 
 
     </LinearLayout>
