--- a/base/src/main/res/layout/list_dialog_item_layout.xml
+++ b/base/src/main/res/layout/list_dialog_item_layout.xml
@@ -16,8 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_line"
+        android:backgroundTint="?android:textColorPrimary"
         android:foreground="?attr/selectableItemBackground"
-        android:paddingVertical="@dimen/padding_small"
+        android:padding="@dimen/padding_default"
         android:text="@{listItem.text}"
         tools:text="@string/app_name">
 
