--- a/base/src/main/res/layout/list_dialog_layout.xml
+++ b/base/src/main/res/layout/list_dialog_layout.xml
@@ -7,13 +7,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="?attr/actionBarSize"
-        android:background="@drawable/round_stroke_filled"
-        android:orientation="vertical"
-        android:padding="@dimen/padding_small">
+        android:background="@drawable/stroke_filled"
+        android:orientation="vertical">
 
 
-        <include layout="@layout/motiv_dots" />
+        <include
+            layout="@layout/motiv_dots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/padding_default"
+            android:layout_marginVertical="@dimen/padding_small" />
 
 
         <androidx.recyclerview.widget.RecyclerView
