--- a/base/src/main/res/layout/motiv_dots.xml
+++ b/base/src/main/res/layout/motiv_dots.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/motiv_dots"
     android:layout_alignParentStart="true"
     android:layout_centerInParent="true"
     android:orientation="horizontal">
