--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -24,9 +24,10 @@
             layout="@layout/style_layout_view" />
 
         <View
+            android:alpha="0.03"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/oblack" />
+            android:background="@color/md_black" />
 
         <RelativeLayout
             android:layout_marginTop="@dimen/topBlurSize"
@@ -46,8 +47,8 @@
                 android:id="@+id/quoteTextView"
                 android:layout_width="match_parent"
                 android:layout_above="@id/author_text_view"
-                android:autoSizeTextType="uniform"
                 android:gravity="start"
+                android:autoSizeTextType="uniform"
                 android:autoSizeMaxTextSize="@dimen/big_quote_size"
                 android:autoSizeMinTextSize="@dimen/min_quote_size"
                 android:breakStrategy="high_quality"
@@ -86,19 +87,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            android:padding="@dimen/padding_default">
+            android:orientation="vertical">
 
             <include
                 android:id="@+id/userTop"
+                android:layout_marginHorizontal="@dimen/margin_default"
                 layout="@layout/user_quote_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-
+                android:layout_height="wrap_content" />
 
             <RelativeLayout
                 android:id="@+id/quoteOptions"
+                android:layout_marginHorizontal="@dimen/margin_default"
+                android:visibility="gone"
+                tools:visibility="visible"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -119,21 +121,9 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/margin_default"
                         android:background="@drawable/favoritecheck"
-                        android:stateListAnimator="@animator/text_animator"
-                        android:button="@color/transparent" />
-
-
-                    <ImageButton
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginHorizontal="@dimen/margin_small"
-                        android:layout_gravity="center"
-                        android:scaleType="center"
-                        android:id="@+id/shareButton"
-                        android:src="@drawable/ic_paper_plane"
-                        android:tint="@color/white"
-                        android:background="@color/transparent"
+                        android:button="@color/transparent"
                         android:stateListAnimator="@animator/text_animator" />
+
 
                     <ImageButton
                         android:id="@+id/editButton"
@@ -175,6 +165,29 @@
                     tools:itemCount="2"
                     tools:listitem="@layout/user_picview" />
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/shareButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/stroke_filled_top"
+                android:foreground="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:padding="@dimen/padding_small"
+                android:text="compartilhar"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:cornerRadius="0dp"
+                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
+                app:drawableTint="@color/colorPrimaryDark"
+                app:elevation="0dp"
+                app:strokeColor="?android:textColorPrimary"
+                app:strokeWidth="2dp"
+                tools:visibility="visible" />
+
 
         </LinearLayout>
 
