--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -58,17 +58,14 @@
         <item name="android:windowBackground">@color/transparent</item>
     </style>
 
-    <style name="Bottom_Dialog_No_Border">
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowTitleStyle">@null</item>
+    <style name="Bottom_Dialog_No_Border" parent="Theme.MaterialComponents.BottomSheetDialog">
         <item name="android:windowAnimationStyle">@style/Animation.Design.BottomSheetDialog</item>
-        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
-        <item name="android:backgroundDimEnabled">false</item>
-        <item name="behavior_peekHeight">700dp</item>
-        <item name="android:background">@android:color/transparent</item>
+        <item name="colorPrimary">@color/material_purple400</item>
+        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="colorPrimaryDark">@color/material_purple800</item>
+        <item name="colorAccent">@color/material_purpleA100</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
     </style>
 
     <style name="Full_Screen_Dialog" parent="Theme.MaterialComponents.NoActionBar">
@@ -80,5 +77,40 @@
         <item name="cornerSizeBottomRight">@dimen/radius_medium</item>
         <item name="cornerFamilyBottomLeft">rounded</item>
         <item name="cornerFamilyBottomRight">rounded</item>
+    </style>
+
+    <style name="ButtonPositive" parent="Widget.MaterialComponents.Button">
+        <item name="strokeWidth">@dimen/default_stroke</item>
+        <item name="elevation">0dp</item>
+        <item name="strokeColor">?android:textColorPrimary</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="android:textColor">@color/md_white</item>
+    </style>
+
+    <style name="ButtonNegative" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/padding_small</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">?android:textColorHint</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="strokeWidth">@dimen/default_stroke</item>
+        <item name="strokeColor">?android:textColorHint</item>
+    </style>
+
+    <style name="MotivCard">
+        <item name="cardCornerRadius">@dimen/radius_small</item>
+        <item name="cardBackgroundColor">@color/colorAccent</item>
+        <item name="strokeColor">@color/selected_style</item>
+        <item name="strokeWidth">@dimen/default_stroke</item>
+        <item name="android:layout_margin">@dimen/margin_small</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:stateListAnimator">@animator/list_animator</item>
+        <item name="android:checkable">true</item>
     </style>
 </resources>
