--- a/base/src/main/res/values/themes.xml
+++ b/base/src/main/res/values/themes.xml
@@ -29,5 +29,28 @@
 
     </style>
 
+    <style name="Motiv.Manager.Theme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="fontFamily">@font/questrial</item>
+        <item name="font">@font/questrial</item>
+        <item name="android:colorBackground">@color/md_white</item>
+        <item name="dividerColor">@color/material_grey100</item>
+        <item name="navblurOverLayColor">@color/lwhite</item>
+        <item name="blurOverLayColor">#CCFFFFFF</item>
+        <item name="colorPrimary">@color/material_purple400</item>
+        <item name="colorPrimaryDark">@color/material_purple800</item>
+        <item name="colorAccent">@color/material_purpleA100</item>
+        <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
+        <item name="toolbarStyle">@style/AppToolbar</item>
+        <item name="actionBarStyle">@style/ActionBar</item>
+        <item name="searchViewStyle">@style/Searchtheme</item>
+        <item name="snackbarStyle">@style/AppSnackbar</item>
+        <item name="popupMenuStyle">@style/PopupMenu</item>
+        <item name="android:statusBarColor">?android:colorBackground</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_up</item>
+        <item name="android:windowActivityTransitions">true</item>
+    </style>
+
 
 </resources>
