--- a/manager/src/main/res/layout/activity_add_icons.xml
+++ b/manager/src/main/res/layout/activity_add_icons.xml
@@ -5,20 +5,18 @@
 
 
     <LinearLayout
-        android:background="@drawable/round_top"
+        android:background="@drawable/stroke_filled_top"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:padding="@dimen/padding_default">
 
-        <View
-            android:id="@+id/topAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:background="@drawable/gradient_animation"
-            android:backgroundTint="?colorPrimaryDark" />
+        <include
+            layout="@layout/motiv_dots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default" />
 
         <TextView
             android:id="@+id/collapseTitle"
@@ -27,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_alignParentTop="true"
             android:animateLayoutChanges="true"
-            android:padding="@dimen/padding_default"
+            android:layout_margin="@dimen/margin_default"
             android:text="Adicionar novos ícones" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -36,8 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/saveIcons"
             android:layout_below="@id/collapseTitle"
-            android:layout_marginVertical="@dimen/margin_default"
-            android:layout_marginBottom="14dp"
+            android:layout_margin="@dimen/margin_default"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
@@ -59,13 +56,10 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/saveIcons"
+            style="@style/ButtonPositive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:backgroundTint="@color/colorPrimaryDark"
-            android:textColor="@color/white"
-            app:cornerRadius="@dimen/radius_default"
-            android:padding="@dimen/padding_default"
             android:text="Salvar ícones" />
 
 
