--- a/manager/src/main/res/layout/activity_manager.xml
+++ b/manager/src/main/res/layout/activity_manager.xml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:theme="@style/Motiv.Theme">
+    tools:openDrawer="start">
 
-
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
+    <include
+        layout="@layout/main_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/transparent"
-        app:elevation="0dp"
-        app:itemIconSize="20dp"
-        app:itemIconTint="@color/selected_font"
-        app:itemRippleColor="@color/colorAccent"
-        app:itemTextColor="@color/selected_font"
-        app:labelVisibilityMode="unlabeled"
+        android:layout_height="match_parent" />
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@drawable/stroke_filled"
+        app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/bottom_nav_menu" />
 
 
-    <FrameLayout
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/nav_view" />
-
-    <include layout="@layout/blur_layout" />
-
-    <include
-        android:id="@+id/motiv_top"
-        layout="@layout/motiv_toolbar" />
-
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
