--- a/manager/src/main/res/layout/fragment_icons.xml
+++ b/manager/src/main/res/layout/fragment_icons.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingTop="?attr/actionBarSize"
         android:id="@+id/managerRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:itemCount="10"
         tools:listitem="@layout/pics_layout" />
 </layout>
