--- a/manager/src/main/res/layout/style_card.xml
+++ b/manager/src/main/res/layout/style_card.xml
@@ -6,8 +6,8 @@
         android:id="@+id/styleCard"
         android:layout_height="250dp"
         app:cardBackgroundColor="?attr/dividerColor"
-        android:layout_margin="@dimen/margin_small"
-        app:cardCornerRadius="@dimen/radius_default"
+        android:layout_margin="@dimen/margin_default"
+        app:cardCornerRadius="@dimen/radius_small"
         app:cardElevation="0dp"
         app:strokeColor="?android:textColorPrimary"
         android:foreground="?attr/selectableItemBackground"
@@ -30,9 +30,12 @@
             android:textColor="?android:textColorPrimary"
             android:textAlignment="center"
             android:transitionName="@string/style_text_transtition"
-            android:text="Motiv"
+            android:autoSizeMaxTextSize="@dimen/big_quote_size"
             android:layout_width="match_parent"
-            android:textSize="@dimen/default_quote_size" />
+            android:autoSizeMinTextSize="@dimen/min_quote_size"
+            android:autoSizeTextType="uniform"
+            android:breakStrategy="high_quality"
+            android:text="@string/app_name" />
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
