--- a/manager/src/main/res/menu/bottom_nav_menu.xml
+++ b/manager/src/main/res/menu/bottom_nav_menu.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/navigation_home"
             android:icon="@drawable/ic_saturn_and_other_planets_primary"
-            android:title="@string/title_home" />
+            android:title="Home" />
 
         <item
             android:id="@+id/navigation_icons"
