--- a/base/src/main/res/layout/sample_extrude_text_view.xml
+++ b/base/src/main/res/layout/sample_extrude_text_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.ilustris.motiv.base.components.ExtrudeTextView
+    <com.ilustris.motiv.base.components.MotivTextView
         style="@style/TextAppearance.MaterialComponents.Headline3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,10 +14,7 @@
         android:text="@string/app_name"
         android:textColor="@color/md_black"
         android:textStyle="bold"
-        app:extrudeColor="@color/md_red500"
-        app:extrudeDepth="10"
-        app:extrudeStrokeColor="@color/white"
-        app:extrudeStrokeWidth="4"
-        app:extrudeXPosition="-1" />
+        app:motivStrokeColor="@color/colorAccent"
+        app:motivStrokeWidth="@dimen/default_stroke" />
 
 </FrameLayout>
